[gd_scene load_steps=7 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://InventoryItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://CodePages.tscn" type="PackedScene" id=3]
[ext_resource path="res://SingleCodePage.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlanetDatabase.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tablet.tscn" type="PackedScene" id=6]

[node name="Inventory" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
InventoryItem = ExtResource( 2 )

[node name="CodePages" parent="." index="0" instance=ExtResource( 3 )]

visible = false

[node name="SingleCodePage" parent="." index="1" instance=ExtResource( 4 )]

visible = false

[node name="PlanetDatabase" parent="." index="2" instance=ExtResource( 5 )]

visible = false

[node name="Tablet" parent="." index="3" instance=ExtResource( 6 )]

visible = false

[node name="ItemsBar" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0


